# LLM_apps

./: .envrc  .gitignore  .gitmodules  README.md
llm-apps/: .cruft.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
llm-apps/.devcontainer/: devcontainer.json
llm-apps/.github/workflows/: test.yml
llm-apps/src/langchain_notebook/: LangChain Cookbook Part 1 - Fundamentals.ipynb  LangChain Cookbook Part 2 - Use Cases.ipynb  quickstart.ipynb
llm-apps/src/llm_apps/: __init__.py  app.py  cli.py  sentry.py
llm-apps/tests/: __init__.py  test_cli.py  test_import.py  test_sentry.py
